--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,136 @@
-.App {
-  text-align: center;
+/* Centralized CSS styles */
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #17181F;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.navbar {
+  background-color: #17181F;
+  color: #fff;
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar ul {
+  list-style: none;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+  padding: 0;
+}
+
+.navbar li {
+  margin: 0 10px;
+}
+
+.navbar ul li .nav-item{
+  color: #fff;
+  text-decoration: none;
+}
+
+.page {
+  padding: 20px;
+}
+
+.task-list {
+  margin-top: 25px;
+}
+
+.task-list form{
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-bottom: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.task-list form input{
+  width: 300px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list form select{
+  width: 100px;
+  margin: 0 20px;
+  padding: 10px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+
+.task-list form button{
+  padding: 12px;
+  border: none;
+  border-radius: 10px;
+  margin-bottom: 10px;
+  cursor: pointer;
+}
+
+.task-item {
+  display: flex;
+  align-items: center;
+  margin: 10px 0;
+  border: none;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: #30313D;
+}
+
+.task-item input[type=checkbox]{
+  height: 18px;
+  width: 18px;
+}
+
+.task-item.complete {
+  text-decoration: line-through;
+  color: #aaa;
+}
+
+.task-text {
+  flex: 1;
+  margin-left: 10px;
+}
+
+.priority {
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 5px;
+  border-radius: 5px;
+  font-weight: bold;
+}
+
+.low {
+  background-color: #64ed4b;
+}
+
+.medium {
+  background-color: #e4bf27;
+}
+
+.high {
+  background-color: #f05749;
+}
+
+.completed {
+  text-decoration: line-through;
+  color: #aaa;
+}
+
+button {
+  background-color: #f28c83;
+  color: #fff;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 5px;
+  cursor: pointer;
 }
